<ul>
	<li>V1.0.0
  	<ul>
                <li>2003-10-07 DP - Set cache value correctly when creating sequences.
                <li>2003-10-07 DP - Display/use char instead of bpchar.
                <li>2003-10-07 AP - Fixed the frogfrog constraint (doubling of names).
                <li>2003-10-06 AP - Fix Unique Constraint creation
		<li>2003-10-03 DP - Reconnect to databases properly after failed attempt to drop.
                <li>2003-10-02 AP - Column DEFAULT fix
                <li>2003-10-02 AP - Fix quoting for key in EditGrid
                <li>2003-10-01 AP - client encoding SQL_ASCII for server SQL_ASCII
		<li>2003-10-01 DP - Correctly quote table names when creating indexes.
		<li>2003-09-30 HS - Display new triggers correctly in the treeview.
		<li>2003-09-30 DP - Allow creation of triggers with functions in schemas not in the search path.
    	</ul>
	<li>V0.9.3 Devel
  	<ul>
		<li>2003-09-26 HS - Handle Primary Key comments correctly.
		<li>2003-09-24 AP - rule condition fix
		<li>2003-09-26 HS - column quoting when reading pgSet
		<li>2003-09-14 AP - document-here support for pgsql7.5
		<li>2003-09-12 HS - Display and edit check constraint comments properly.
		<li>2003-09-12 HS - Display fkey comments properly.
		<li>2003-09-11 JMP - RPM packages now install pgAdmin3 icon.
		<li>2003-09-11 JMP - SRPM package should rebuild anywhere.
		<li>2003-09-10 AP - correct quoting in dlg Operator, support schema qualified merge ops.
		<li>2003-09-10 AHP - Search for PostgreSQL includes in /usr/include and /usr/include/pgsql.
		<li>2003-09-09 HS/DP - Populate Operator combos properly.
		<li>2003-09-09 HS - Retrieve freshly created conversions correctly.
		<li>2003-09-09 HS - Correctly quote the ANY keyword in aggregate definitions.
		<li>2003-09-09 HS - Fix for casts with created WITHOUT FUNCTION (binary compatible).
		<li>2003-09-09 AP - fix grid for tables with multicolumn pk