@@ -1,6 +1,7 @@
 <ul>
 	<li>V1.0.0
   	<ul>
+                <li>2003-10-13 AP - Fix encoding when connecting
                 <li>2003-10-07 DP - Set cache value correctly when creating sequences.
                 <li>2003-10-07 DP - Display/use char instead of bpchar.
                 <li>2003-10-07 AP - Fixed the frogfrog constraint (doubling of names).
